--- a/源代码/案例代码/MySchool/MySchool/MySchool.csproj
+++ b/源代码/案例代码/MySchool/MySchool/MySchool.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Data.Linq" />
@@ -82,6 +83,11 @@
       <DependentUpon>MainFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="MySchool.cs" />
+    <Compile Include="MySchoolDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MySchoolDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScoreMsgFrm.cs">
@@ -137,6 +143,17 @@
       <DependentUpon>StudentMsgFrm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="MySchoolDataSet.xsc">
+      <DependentUpon>MySchoolDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="MySchoolDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>MySchoolDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="MySchoolDataSet.xss">
+      <DependentUpon>MySchoolDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
