--- a/SourceCode/第2版（2-9章）代码/Test9/Test9/Test9.csproj
+++ b/SourceCode/第2版（2-9章）代码/Test9/Test9/Test9.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Exp9_1.Exp9_1</StartupObject>
+    <StartupObject>Test9_7.Test9_7</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
